--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: mapbox_autocomplete_search_widget
-description: A new Flutter package project.
+description: MapboxAutocompleteSearchWidget is a flutter package that allows you to search for place name in a autocomplete fashion.
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/TeaTalkInternal/mapbox_autocomplete_search_widget
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,9 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: 
-  flutter_riverpod: 
-  url_launcher: 
+  dio: ^3.0.10
+  flutter_riverpod: ^0.13.1+1
+  url_launcher: ^6.0.2
 
 dev_dependencies:
   flutter_test:
